force-app/main/default/objects/BMCServiceDesk__SYSQVCondition__c/BMCServiceDesk__SYSQVCondition__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the query conditions of QuickViews.</description>
    <label>Quickview Conditions</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SYSQVCondition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVConditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>