force-app/main/default/objects/BMCServiceDesk__SYSQVCondition__c/fields/BMCServiceDesk__op1IsRuntimeVar__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__op1IsRuntimeVar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Op1 Is Runtime Var</label>
    <type>Checkbox</type>
</CustomField>