force-app/main/default/objects/BMCServiceDesk__SYSQVCondition__c/fields/BMCServiceDesk__orderIndex__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__orderIndex__c</fullName>
    <label>Order Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>