force-app/main/default/objects/BMCServiceDesk__SYSQVCondition__c/fields/BMCServiceDesk__SYSQVOperator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SYSQVOperator__c</fullName>
    <label>SYSQVOperator</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>